ipcz: Introduce parcel objects
This introduces parcel objects as a first-class concept of the public
ipcz API, replacing the concept of validators. In particular,
applications have the option to Get() parcel objects from portals
rather than getting the parcel's data and handles directly.

Data and handles can then be retrieved from a parcel object in the
same way they can be retrieved from portals, i.e. with the usual
Get/BeginGet/EndGet APIs.

This allows applications to consume individual parcel contents with
two-phase I/O operations (i.e. with direct access to the parcel
memory) without tying up the receiving portal in the meantime.

MojoIpcz exploits this new API feature to avoid copying parcel data
into its own type of MojoMessage objects, instead retaining a parcel
handle and exposing message data via a two-phase get.

Bug: 1299283
Fixed: 1384208
Change-Id: Iafd2efb16a1aa150dffb9baba9fe445ef01763e6
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/4023329
Commit-Queue: Ken Rockot <rockot@google.com>
Reviewed-by: Alex Gough <ajgo@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1071963}
NOKEYCHECK=True
GitOrigin-RevId: da5cd04508573976a35a81780ef12f57bfc9bee9

--- a/src/BUILD.gn
+++ b/src/BUILD.gn
@@ -232,6 +232,7 @@ ipcz_source_set("impl") {
     "ipcz/operation_context.h",
     "ipcz/parcel.h",
     "ipcz/parcel_queue.h",
+    "ipcz/parcel_wrapper.h",
     "ipcz/portal.h",
     "ipcz/ref_counted_fragment.h",
     "ipcz/remote_router_link.h",
@@ -243,7 +244,6 @@ ipcz_source_set("impl") {
     "ipcz/sequenced_queue.h",
     "ipcz/sublink_id.h",
     "ipcz/test_messages.h",
-    "ipcz/validator.h",
   ]
   sources = [
     "ipcz/api_object.cc",
@@ -285,6 +285,7 @@ ipcz_source_set("impl") {
     "ipcz/node_name.cc",
     "ipcz/parcel.cc",
     "ipcz/parcel_queue.cc",
+    "ipcz/parcel_wrapper.cc",
     "ipcz/portal.cc",
     "ipcz/ref_counted_fragment.cc",
     "ipcz/remote_router_link.cc",
@@ -299,7 +300,6 @@ ipcz_source_set("impl") {
     "ipcz/trap_event_dispatcher.h",
     "ipcz/trap_set.cc",
     "ipcz/trap_set.h",
-    "ipcz/validator.cc",
   ]
   public_deps = [
     ":ipcz_header",
@@ -387,6 +387,7 @@ ipcz_source_set("ipcz_tests_sources") {
     "ipcz/router_link_test.cc",
     "ipcz/sequenced_queue_test.cc",
     "merge_portals_test.cc",
+    "parcel_test.cc",
     "queueing_test.cc",
     "reference_drivers/sync_reference_driver_test.cc",
     "remote_portal_test.cc",
